allow posting new messages

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -33,8 +33,7 @@ Hello {{.}}!
 {{#messages}}
 <a href="/?replyId={{id}}">{{author}}: {{text}}</a><br>
 {{/messages}}
-</body>
-<body>
+</form>
 
 </body>
 </html>
