--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -30,6 +30,16 @@ Hello {{.}}!
 <br>
 {{/username}}
 
+{{#message}}
+   <h1>{{author}} : {{text}}</h1>
+    {{#isMe}}
+    <form action="/delete-message" method="post">
+        <input type="hidden" name="id" value="{{id}}"/>
+        <button type="submit">Delete</button>
+    </form>
+    {{/isMe}}
+    {{/message}}
+
 {{#messages}}
 <a href="/?replyId={{id}}">{{author}}: {{text}}</a><br>
 {{/messages}}
